[Bug]Fix page alignment css (#140)

--- a/app/js/components/page/pageComponent.css
+++ b/app/js/components/page/pageComponent.css
@@ -10,5 +10,5 @@
 
  .page-wrapper {
     flex-direction: column;
-    justify-content: unset;
+    justify-content: unset !important;
 }
